--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 app:
-  image: repo2.test.cornerstonenw.com/linuxfest/app:latest
+  image: dockerreg.coltonoslund.cornerstonenw.com:5000/linuxfest/app:latest
   ports:
     - "8081:8081"
   container_name: app
 static:
-  image: repo2.test.cornerstonenw.com/linuxfest/static:latest
+  image: dockerreg.coltonoslund.cornerstonenw.com:5000/linuxfest/static:latest
   ports:
     - "80:80"
   container_name: static
