--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ app:
     - "8081:8081"
   container_name: app
 static:
-  image: dockerreg.coltonoslund.cornerstonenw.com:5000/linuxfest/static:latest
+  image: dockerreg.coltonoslund.cornerstonenw.com:5000/jenkins-2:latest
   ports:
     - "80:80"
   container_name: static
