--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
-{
-  "name": "automagically",
-  "version": "0.0.0",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "express": "4.13.4",
-    "serve-static": "1.10.2",
-    "body-parser": "1.14.2"
-  }
-}
+#{
+ # "name": "automagically",
+  #"version": "0.0.0",
+  #"scripts": {
+  #  "start": "node server.js"
+  #},
+  #"dependencies": {
+  #"express": "4.13.4",
+   # "serve-static": "1.10.2",
+    #"body-parser": "1.14.2"
+  #}
+#}
